// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Planets Action Shold create an action to fetching planets data 1`] = `
Array [
  Object {
    "type": "FETCH_PLANETS_STARTED",
  },
  Object {
    "planets": Object {
      "page": 1,
      "pageCount": 2,
      "results": Array [
        Object {
          "avatar": "http://i.pravatar.cc/40?img=0.28152803167206786",
          "climate": "murky",
          "diameter": 7065,
          "gravity": 2.5,
          "idItem": 1,
          "name": "Alma Hopkins",
          "orbital_period": 459,
          "population": 38727741060,
          "rotation_period": 128,
          "surface_water": 37,
          "terrain": "swamp",
        },
      ],
    },
    "type": "FETCH_PLANETS_SUCCEEDED",
  },
]
`;

exports[`Testing Planets Action Should create an action to update planets data 1`] = `
Array [
  Object {
    "type": "UPDATE_PLANETS_IS_FETCHING",
  },
  Object {
    "planets": Object {
      "page": 1,
      "pageCount": 2,
      "results": Array [
        Object {
          "avatar": "http://i.pravatar.cc/40?img=0.28152803167206786",
          "climate": "murky",
          "diameter": 7065,
          "gravity": 2.5,
          "idItem": 1,
          "name": "Person Updating",
          "orbital_period": 459,
          "population": 38727741060,
          "rotation_period": 128,
          "surface_water": 37,
          "terrain": "swamp",
        },
      ],
    },
    "type": "UPDATE_PLANETS_SUCCEEDED",
  },
]
`;

exports[`Testing Planets Action Should return ERROR in fetching planets data 1`] = `
Array [
  Object {
    "type": "FETCH_PLANETS_STARTED",
  },
  Object {
    "error": [Error: Request failed with status code 400],
    "type": "FETCH_PLANETS_FAILED",
  },
]
`;

exports[`Testing Planets Action Should return ERROR on updating planets data 1`] = `
Array [
  Object {
    "type": "UPDATE_PLANETS_IS_FETCHING",
  },
  Object {
    "error": [Error: Request failed with status code 400],
    "type": "UPDATE_PLANETS_FAILED",
  },
]
`;
